setup github pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Community Engaged Design Toolbox
+description: Tools for community-engaged designers
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://SamuelAcunaPhD.github.io.Community_Engaged_Design_Toolbox
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
