--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Community Engaged Design Toolbox
 description: Tools for community-engaged designers
 theme: just-the-docs
 
-url: https://SamuelAcunaPhD.github.io.Community_Engaged_Design_Toolbox
+url: https://SamuelAcunaPhD.github.io/Community_Engaged_Design_Toolbox
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
