--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,14 @@ url: https://SamuelAcunaPhD.github.io/Community_Engaged_Design_Toolbox
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
+# custom color scheme
+color_scheme: gmu_custom
+
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+
 
 # To add an extra plugin, you need to add it in the `Gemfile` *and* in `_config.yml`. 
 #plugins: 
