--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
 
 # custom color scheme
-color_scheme: gmu_custom
+color_scheme: dark
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
